tests/fixtures/negative/skp1-missing-final-chunk.hex
534b50310101010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
